# scv-profiler

./: .gitignore  README.md  pyproject.toml
data/: sample.csv
outputs/: my_report.json  my_report.md  profile-sample.md  profile_report.json  profile_report.md
src/UNKNOWN.egg-info/: SOURCES.txt
src/csv_profiler/: app.py  cli.py  io.py  profiling.py  render.py  requirements.txt
src/csv_profiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/outputs/: profile-sample.json  profile-sample.md
week2-data-work/src/: transforms.py
