[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-profiler"
version = "0.1.0"
description = "A CSV profiling tool that analyzes and generates reports for CSV files"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["csv", "profiler", "data", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "typer>=0.9"
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
csv-profiler = "src.csv_profiler.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
